# shogi_official_kifu

./: Cargo.toml  LICENSE  Makefile  README.md  cbindgen.toml  generate_header.sh
.github/workflows/: c-bindings.yml  c-shogi_core.yml  c-shogi_legality_lite.yml  c-shogi_usi_parser.yml  cargo-bloat.yml  rust-shogi_core.yml  rust-shogi_legality_lite.yml  rust-shogi_usi_parser.yml  rust.yml
c_tests/: Makefile
include/: shogi_official_kifu.h
shogi_core/: Cargo.toml  design-principle-ja.md
shogi_core/c_tests/: Makefile
shogi_core/include/: shogi_core.h
shogi_core/src/: bitboard.rs  color.rs  hand.rs  legality.rs  lib.rs  mv.rs  piece.rs  piece_kind.rs  position.rs  square.rs  to_usi.rs
shogi_core_c/: Cargo.toml
shogi_core_c/include/: shogi_core.h
shogi_legality_lite/: Cargo.toml  generate_header.sh
shogi_legality_lite/include/: shogi_legality_lite.h
shogi_legality_lite/src/: lib.rs  normal.rs  prelegality.rs
shogi_legality_lite_c/: Cargo.toml
shogi_legality_lite_c/include/: shogi_legality_lite.h
shogi_legality_lite_c/src/: lib.rs
shogi_official_kifu/: Cargo.toml  README.md
shogi_official_kifu/src/: disambiguation.rs  lib.rs  main.rs
shogi_official_kifu_c/: Cargo.toml  README.md
shogi_official_kifu_c/src/: lib.rs  no_std.rs
shogi_usi_parser/: Cargo.toml  design-principles-ja.md
shogi_usi_parser/src/: color.rs  common.rs  error.rs  hand.rs  lib.rs  mv.rs  piece.rs  position.rs  square.rs
shogi_usi_parser_c/: Cargo.toml  Makefile  cbindgen.toml  generate_header.sh
shogi_usi_parser_c/c_tests/: Makefile
shogi_usi_parser_c/include/: shogi_usi_parser.h
shogi_usi_parser_c/src/: lib.rs
src/: disambiguation.rs  lib.rs
