[package]
name = "shogi_official_kifu"
version = "0.1.0"
edition = "2021"

[features]
default = ["kansuji", "std"]
kansuji = []
std = []

[lib]
crate-type = [
    "rlib",
    "cdylib",
]

[dependencies]
shogi_core = { git = "https://github.com/rust-shogi-crates/shogi_core", default-features = false }
shogi_legality_lite = { path = "./shogi_legality_lite", default-features = false, features = ["alloc"] }
shogi_usi_parser = { path = "./shogi_usi_parser" }

[profile.dev]
debug = false

[profile.release]
opt-level = "z"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.
