[workspace]
members = [
    "shogi_official_kifu",
    "shogi_official_kifu_c",
]

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.

[profile.release-speed]
inherits = "release"
opt-level = 3
