[package]
name = "shogi_core"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = []
hash = []
ord = []
std = ["alloc"]

[lib]
crate-type = [
    "rlib",
    "cdylib", # in debug + no-std setting it doesn't work. _memset is undefined
]

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.

[profile.release-speed]
inherits = "release"
opt-level = 3
