[package]
name = "shogi_core_c"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
std = ["shogi_core/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_core = { path = "../shogi_core", default-features = false }

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.

[profile.release-speed]
inherits = "release"
opt-level = 3
