[package]
name = "shogi_legality_lite_c"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = ["shogi_legality_lite/alloc"]
std = ["shogi_legality_lite/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_legality_lite = { path = "../shogi_legality_lite", default-features = false }

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.

[profile.release-speed]
inherits = "release"
opt-level = 3
