[package]
name = "shogi_official_kifu"
version = "0.1.1"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "The official notation of shogi moves"
documentation = "https://docs.rs/shogi_official_kifu"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_official_kifu/tree/main/shogi_official_kifu"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["kansuji", "std"]
kansuji = []
std = ["shogi_core/std", "shogi_legality_lite/std"]

[lib]
crate-type = [
    "rlib",
]

[dependencies]
shogi_core = { version = "0.1", default-features = false, features = ["alloc"] }
shogi_legality_lite = { version = "0.1.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
shogi_usi_parser = "=0.1.0"
