[package]
name = "shogi_usi_parser"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
hash = ["shogi_core/hash"]
ord = ["shogi_core/ord"]
std = ["alloc", "shogi_core/std"]

[lib]
crate-type = [
    "rlib",
]

[dependencies]
shogi_core = { version = "0.1", default-features = false }

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.
